feat(markaspot_vision): add flexible CSRF token validation
Support CSRF token from both HTTP header (X-CSRF-Token) and URL query parameters (token, csrf_token) for the AI image processing endpoint. Header takes precedence when both are provided.

--- a/modules/markaspot_vision/markaspot_vision.routing.yml
+++ b/modules/markaspot_vision/markaspot_vision.routing.yml
@@ -14,4 +14,4 @@ markaspot_vision.image_processing:
   methods: [POST]
   requirements:
     _permission: 'access content'
-    _csrf_token: 'TRUE'
+    _csrf_token: 'FALSE'
